<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageChanger"
    android:orientation="vertical"
    android:layout_margin="40dp"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:textColor="#679ec0"
        android:textStyle="bold"
        android:text="@string/change_language"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_en"
        android:id="@+id/btn_en"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"
        android:backgroundTint="#679ec0" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pl"
        android:id="@+id/btn_pl"
        android:textColor="@color/white"
        android:backgroundTint="#679ec0"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_esp"
        android:id="@+id/btn_sp"
        android:textColor="@color/white"
        android:backgroundTint="#679ec0"/>
</LinearLayout>