<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#679ec0"
    android:padding="20dp"
    tools:context=".AddNoteActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titletextview"
        android:text="@string/add_new_note"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner"
        android:id="@+id/centerLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleinput"
            android:hint="@string/title"
            android:background="#50679ec0"
            android:padding="10dp"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptioninput"
            android:hint="@string/description"
            android:background="#50679ec0"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:lines="10"
            android:gravity="top"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        android:id="@+id/savebtn"
        android:layout_below="@id/centerLayout"
        android:backgroundTint="@color/white"
        android:layout_margin="10dp"
        android:textColor="#679ec0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLayout"
        android:backgroundTint="@color/white"
        android:layout_margin="10dp"
        android:text="@string/cancel_note"
        android:textColor="#679ec0" />


</LinearLayout>